--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -6,7 +6,9 @@
 <div class="container">
 	{% for allowed_domain in allowed_domains %}
 	<div class="row">
-		<a href="{% url 'domain-stats' allowed_domain.name %}">{{allowed_domain.name}}</a>
+		<strong>{{allowed_domain.name}}<strong>
+		<a href="{% url 'events-page' allowed_domain.name %}">Event Page</a>
+		<a href="{% url 'domain-stats' allowed_domain.name %}">Stats Page</a>
 	</div>
 	{% endfor %}
 
