--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -36,9 +36,7 @@
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>150</h3>
-
-                <p>New Orders</p>
+                <p>Month to date<br>send count</p>
               </div>
               <div class="icon">
                 <i class="ion ion-bag"></i>
@@ -51,9 +49,7 @@
             <!-- small box -->
             <div class="small-box bg-success">
               <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                <p>Bounce Rate</p>
+                <p>Last 24<br>send counts</p>
               </div>
               <div class="icon">
                 <i class="ion ion-stats-bars"></i>
@@ -66,9 +62,7 @@
             <!-- small box -->
             <div class="small-box bg-warning">
               <div class="inner">
-                <h3>44</h3>
-
-                <p>User Registrations</p>
+                <p>Top 10 send<br>volumn domains</p>
               </div>
               <div class="icon">
                 <i class="ion ion-person-add"></i>
@@ -81,9 +75,7 @@
             <!-- small box -->
             <div class="small-box bg-danger">
               <div class="inner">
-                <h3>65</h3>
-
-                <p>Unique Visitors</p>
+                <p>Worst 10 domains<br>based on delivery %</p>
               </div>
               <div class="icon">
                 <i class="ion ion-pie-graph"></i>
