--- a/templates/app/domains.html
+++ b/templates/app/domains.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block head_title %}Event{% endblock %}
+{% block head_title %}Domains{% endblock %}
 
 	
 {% block content %}
@@ -9,6 +9,13 @@
     <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1 class="m-0 text-dark">Domains</h1>
+          </div><!-- /.col -->
+          <div class="col-sm-6">
+          </div><!-- /.col -->
+        </div><!-- /.row -->
       </div><!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
@@ -18,34 +25,27 @@
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
         <div class="row">
-          <div class="col-md-12">
-            <!-- general form elements disabled -->
-            <div class="card card-warning">
-              <div class="card-header">
-                <h3 class="card-title">Events</h3>
-              </div>
-              <!-- /.card-header -->
-              <div class="card-body">
-								<table class="table table-head-fixed text-nowrap">
+          <div class="col-12">
+            <div class="card">
+              <div class="card-body table-responsive p-0" style="max-height: 400px;">
+                <table class="table table-head-fixed text-nowrap">
                   <thead>
                     <tr>
-                      <th>Time</th>
-                      <th>Event Count</th>
+                      <th>No</th>
+                      <th>Name</th>
                     </tr>
                   </thead>
                   <tbody>
-                    {% for event, val in new_events %}
+                    {% for domain in allowed_domains %}
                     <tr>
-                      <td>{{event}}:00</td>
-                      <td>{{val}} items</td>
+                      <td>{{forloop.counter}}</td>
+                      <td><a href="{% url 'events' domain.name %}">{{domain.name}}</a></td>
                     </tr>
                     {% endfor %}
                   </tbody>
                 </table>
               </div>
-              <!-- /.card-body -->
             </div>
-            <!-- /.card -->
           </div>
         </div>
       </div>
