--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="{% url 'domains' %}" class="nav-link">
               <i class="nav-icon fas fa-book"></i>
               <p>
                 Domains
