--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 	  <div class="card">
 		<div class="card-body login-card-body">
 		  <p class="login-box-msg">Sign in to start your session</p>
-
+		  <div class="text-danger">{{error}}</div>
 		  <form action="{% url 'auth_login' %}" method="post">
 			{% csrf_token %}
 			<div class="input-group mb-3">
