--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,7 +10,7 @@
       <div class="card">
         <div class="card-body register-card-body">
           <p class="login-box-msg">Register a new membership</p>
-
+          <div class="text-danger">{{error}}</div>
           <form action="{% url 'auth_signup' %}" method="post">
             {% csrf_token %}
             <div class="input-group mb-1">
